--- a/scoring/L1/configs/not_paid_config.json
+++ b/scoring/L1/configs/not_paid_config.json
@@ -2774,7 +2774,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                "value":"unknown"
+                "value":0
             }
         }
     ],
@@ -2944,7 +2944,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                "value":"unknown"
+                "value":0
             }
         }
     ],
@@ -3875,7 +3875,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                "value":"unknown"
+                "value":0
             }
         }
     ],
@@ -3927,7 +3927,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                "value":"unknown"
+                "value":0
             }
         }
     ],
@@ -3935,7 +3935,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                "value":"unknown"
+                "value":0
             }
         }
     ],
@@ -3943,7 +3943,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                "value":"unknown"
+                "value":0
             }
         }
     ],
@@ -3951,7 +3951,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                "value":"unknown"
+                "value":0
             }
         }
     ],
@@ -3959,7 +3959,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                "value":"unknown"
+                "value":0
             }
         }
     ],
@@ -3975,7 +3975,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                "value":"unknown"
+                "value":0
             }
         }
     ],
@@ -3983,7 +3983,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                "value":"unknown"
+                "value":0
             }
         }
     ],
@@ -3991,7 +3991,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                "value":"unknown"
+                "value":0
             }
         }
     ],
@@ -4023,7 +4023,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                "value":"unknown"
+                "value":0
             }
         }
     ],
@@ -4153,7 +4153,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                "value":"unknown"
+                "value":0
             }
         }
     ],
