--- a/scoring/L1/configs/not_paid_config.json
+++ b/scoring/L1/configs/not_paid_config.json
@@ -4015,7 +4015,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                "value":"unknown"
+                "value":0
             }
         }
     ],
