--- a/scoring/L1/configs/paid_data_config.json
+++ b/scoring/L1/configs/paid_data_config.json
@@ -2574,7 +2574,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                "value":"unknown"
+                "value":0
             }
         }
     ],
@@ -2744,7 +2744,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                "value":"unknown"
+                "value":0
             }
         }
     ],
@@ -3674,7 +3674,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                "value":"unknown"
+                "value":0
             }
         }
     ],
@@ -3726,7 +3726,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                "value":"unknown"
+                "value":0
             }
         }
     ],
@@ -3734,7 +3734,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                "value":"unknown"
+                "value":0
             }
         }
     ],
@@ -3742,7 +3742,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                "value":"unknown"
+                "value":0
             }
         }
     ],
@@ -3750,7 +3750,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                "value":"unknown"
+                "value":0
             }
         }
     ],
@@ -3758,7 +3758,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                "value":"unknown"
+                "value":0
             }
         }
     ],
@@ -3774,7 +3774,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                "value":"unknown"
+                "value":0
             }
         }
     ],
@@ -3782,7 +3782,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                "value":"unknown"
+                "value":0
             }
         }
     ],
@@ -3790,7 +3790,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                "value":"unknown"
+                "value":0
             }
         }
     ],
@@ -3814,7 +3814,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                "value":"unknown"
+                "value":0
             }
         }
     ],
@@ -3822,7 +3822,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                "value":"unknown"
+                "value":0
             }
         }
     ],
@@ -3952,7 +3952,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                "value":"unknown"
+                "value":0
             }
         }
     ],
