--- a/scoring/L1/configs/partner_data_config.json
+++ b/scoring/L1/configs/partner_data_config.json
@@ -388,7 +388,7 @@
         {
             "apply": "get_keyword_vector",
             "kwargs": {
-                "vector": "count_vec"
+                "vector": "count_vectorizer"
             },
             "alias": "count_vector"
         },
@@ -402,7 +402,7 @@
         {
             "apply": "get_keyword_vector",
             "kwargs": {
-                "vector": "count_vec"
+                "vector": "tfidf_vectorizer"
             },
             "alias": "tfidf_vector"
         },
