--- a/scoring/Policy/configs/not_paid_config.json
+++ b/scoring/Policy/configs/not_paid_config.json
@@ -3071,6 +3071,13 @@
     ],
     "Input Phone1 Contactability Score":[
         {
+            "apply":"fill_na",
+            "kwargs":{
+                "value":0
+            },
+            "alias":"contact_counts"
+        },
+        {
             "apply":"substitute",
             "kwargs":{
                 "from":[
@@ -3215,6 +3222,13 @@
         }
     ],
     "Appended Phones1 Contactability Score":[
+        {
+            "apply":"fill_na",
+            "kwargs":{
+                "value":1
+            },
+            "alias":"contact_counts"
+        },
         {
             "apply":"substitute",
             "kwargs":{
@@ -3361,6 +3375,13 @@
     ],
     "Appended Phones2 Contactability Score":[
         {
+            "apply":"fill_na",
+            "kwargs":{
+                "value":2
+            },
+            "alias":"contact_counts"
+        },
+        {
             "apply":"substitute",
             "kwargs":{
                 "from":[
@@ -3505,6 +3526,13 @@
         }
     ],
     "Appended Phones3 Contactability Score":[
+        {
+            "apply":"fill_na",
+            "kwargs":{
+                "value":3
+            },
+            "alias":"contact_counts"
+        },
         {
             "apply":"substitute",
             "kwargs":{
@@ -3660,7 +3688,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                "value":"False"
+                "value":0
             },
             "alias":"is_valid_Appended Emails 1 Email Address"
         },
@@ -3690,7 +3718,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                "value":"False"
+                "value":0
             },
             "alias":"is_valid_Appended Emails 2 Email Address"
         }
@@ -3706,7 +3734,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                "value":"False"
+                "value":0
             },
             "alias":"is_valid_Appended Emails 3 Email Address"
         }
