--- a/scoring/Policy/configs/paid_data_config.json
+++ b/scoring/Policy/configs/paid_data_config.json
@@ -2949,6 +2949,13 @@
     ],
     "Input Phone1 Contactability Score":[
         {
+            "apply":"fill_na",
+            "kwargs":{
+                "value":0
+            },
+            "alias":"contact_counts"
+        },
+        {
             "apply":"substitute",
             "kwargs":{
                 "from":[
@@ -3093,6 +3100,13 @@
         }
     ],
     "Appended Phones1 Contactability Score":[
+        {
+            "apply":"fill_na",
+            "kwargs":{
+                "value":1
+            },
+            "alias":"contact_counts"
+        },
         {
             "apply":"substitute",
             "kwargs":{
@@ -3239,6 +3253,13 @@
     ],
     "Appended Phones2 Contactability Score":[
         {
+            "apply":"fill_na",
+            "kwargs":{
+                "value":2
+            },
+            "alias":"contact_counts"
+        },
+        {
             "apply":"substitute",
             "kwargs":{
                 "from":[
@@ -3383,6 +3404,13 @@
         }
     ],
     "Appended Phones3 Contactability Score":[
+        {
+            "apply":"fill_na",
+            "kwargs":{
+                "value":3
+            },
+            "alias":"contact_counts"
+        },
         {
             "apply":"substitute",
             "kwargs":{
@@ -3538,7 +3566,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                "value":"False"
+                "value":0
             },
             "alias":"is_valid_Appended Emails 1 Email Address"
         },
@@ -3568,7 +3596,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                "value":"False"
+                "value":0
             },
             "alias":"is_valid_Appended Emails 2 Email Address"
         }
@@ -3584,7 +3612,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                "value":"False"
+                "value":0
             },
             "alias":"is_valid_Appended Emails 3 Email Address"
         }
@@ -3845,7 +3873,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                "value":"unknown"
+                "value":0
             }
         }
     ],
@@ -3853,7 +3881,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                "value":"unknown"
+                "value":0
             }
         }
     ],
@@ -3869,7 +3897,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                "value":"unknown"
+                "value":0
             }
         }
     ],
@@ -3885,7 +3913,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                "value":"unknown"
+                "value":0
             }
         }
     ],
@@ -3893,7 +3921,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                "value":"unknown"
+                "value":0
             }
         }
     ],
@@ -3901,7 +3929,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                "value":"unknown"
+                "value":0
             }
         }
     ],
@@ -3925,7 +3953,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                "value":"unknown"
+                "value":0
             }
         }
     ],
@@ -3933,7 +3961,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                "value":"unknown"
+                "value":0
             }
         }
     ],
@@ -4063,7 +4091,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                "value":"unknown"
+                "value":0
             }
         }
     ],
