--- a/scoring/Policy/configs/partner_data_config.json
+++ b/scoring/Policy/configs/partner_data_config.json
@@ -3274,6 +3274,13 @@
     ],
     "Input Phone1 Contactability Score":[
         {
+            "apply":"fill_na",
+            "kwargs":{
+                "value":0
+            },
+            "alias":"contact_counts"
+        },
+        {
             "apply":"substitute",
             "kwargs":{
                 "from":[
@@ -3418,6 +3425,13 @@
         }
     ],
     "Appended Phones1 Contactability Score":[
+        {
+            "apply":"fill_na",
+            "kwargs":{
+                "value":1
+            },
+            "alias":"contact_counts"
+        },
         {
             "apply":"substitute",
             "kwargs":{
@@ -3709,6 +3723,13 @@
     ],
     "Appended Phones3 Contactability Score":[
         {
+            "apply":"fill_na",
+            "kwargs":{
+                "value":3
+            },
+            "alias":"contact_counts"
+        },
+        {
             "apply":"substitute",
             "kwargs":{
                 "from":[
@@ -3863,7 +3884,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                "value":"False"
+                "value":0
             },
             "alias":"is_valid_Appended Emails 1 Email Address"
         },
@@ -3893,7 +3914,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                "value":"False"
+                "value":0
             },
             "alias":"is_valid_Appended Emails 2 Email Address"
         }
@@ -3909,7 +3930,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                "value":"False"
+                "value":0
             },
             "alias":"is_valid_Appended Emails 3 Email Address"
         }
