--- a/scoring/Policy/requirements.txt
+++ b/scoring/Policy/requirements.txt
@@ -8,4 +8,8 @@ pandas
 numpy==1.23.4
 boto3==1.17.97
 botocore==1.20.97
-auto-sklearn==0.15.0
+scikit-learn==0.22.2
+itsdangerous
+phonenumbers
+email_validator
+xgboost
