--- a/scoring/L2/requirements.txt
+++ b/scoring/L2/requirements.txt
@@ -1,6 +1,6 @@
-flask==2.1.0
-cachetools==4.0.0
-gunicorn==20.0.4
+flask==3.0.0
+cachetools==5.3.1
+gunicorn==21.2.0
 kafka-python==2.0.2
 requests
 protobuf==3.20.*
@@ -10,3 +10,4 @@ botocore==1.20.97
 torch==1.5.0
 scipy==1.7.3
 joblib==0.14.1
+itsdangerous
