--- a/scoring/Policy/configs/paid_data_config.json
+++ b/scoring/Policy/configs/paid_data_config.json
@@ -4027,7 +4027,14 @@
             }
         }
     ],
-    "Individual Marital Status":[
+     "Individual Marital Status":[
+        {
+            "apply":"extract_string",
+            "kwargs":{
+                "regex":"r'([A-Za-z]+)'"
+            }, 
+            "alias":"Individual Marital Status New"
+        }, 
         {
             "apply":"fill_na",
             "kwargs":{
@@ -4035,10 +4042,11 @@
             }
         },
         {
-            "apply":"extract_string",
+            "apply":"fill_na",
             "kwargs":{
-                "regex":"r'([A-Za-z]+)'"
-            }
+                "value":"unknown"
+            }, 
+            "alias":"Individual Marital Status New"
         }
     ],
     "Individual Person Type":[
