--- a/scoring/Policy/configs/partner_data_config.json
+++ b/scoring/Policy/configs/partner_data_config.json
@@ -1660,6 +1660,13 @@
             "alias":"p"
         },
         {
+            "apply":"fill_na",
+            "kwargs":{
+                "value":"unknown"
+            },
+            "alias":"p"
+        },
+        {
             "apply":"regex",
             "kwargs":{
                 "from":[
