--- a/scoring/Policy/configs/partner_data_config.json
+++ b/scoring/Policy/configs/partner_data_config.json
@@ -1574,6 +1574,14 @@
             "alias":"is_valid_phone"
         }
     ],
+    "Lead_Network__c": [
+        {
+            "apply": "fill_na", 
+            "kwargs": {
+                "value": "unkown"
+            }
+        }
+    ], 
     "Lead_Ad_Campaign__c":[
         {
             "apply":"regex",
@@ -3108,6 +3116,22 @@
             }
         }
     ],
+    "Lead_Referring_URL__c": [
+        {
+            "apply": "fill_na", 
+            "kwargs": {
+                "value": "unknown"
+            }
+        }
+    ]
+    "Original_Operating_System__c": [
+        {
+            "apply": "fill_na", 
+            "kwargs": {
+                "value": "unknown"
+            }
+        }
+    ]
     "Gender__c":[
         {
             "apply":"fill_na",
