--- a/scoring/Policy/configs/paid_data_config.json
+++ b/scoring/Policy/configs/paid_data_config.json
@@ -41,7 +41,7 @@
         {
             "apply":"get_keyword_vector",
             "kwargs":{
-                "vector":"tfidf_vectorizer.joblib"
+                "vector":"tfidf_vectorizer"
             },
             "alias":"tfidf_vector"
         },
@@ -55,7 +55,7 @@
         {
             "apply":"get_keyword_vector",
             "kwargs":{
-                "vector":"count_vectorizer.joblib"
+                "vector":"count_vectorizer"
             },
             "alias":"count_vector"
         },
